namespace SistemaTutoria.Dominio;

public class Administrador
{
    public int Id { get; set; }
    public string Nombre { get; set; } = "";
}