namespace SistemaTutoria.Dominio;

public class Estudiante
{
    public int Id { get; set; }
    public string Nombre { get; set; } = "";
    public string Correo { get; set; } = "";
}