namespace SistemaTutoria.Dominio;

public class Tutoria
{
    public int Id { get; set; }
    public string Tema { get; set; } = "";
    public string Descripcion { get; set; } = "";
}