@startuml

title Sistema de Gestión de Tutorías - Modelo de Clases

' =========================
' CLASES DEL DOMINIO
' =========================

class Administrador {
    +Id : int
    +Nombre : string
}

class Estudiante {
    +Id : int
    +Nombre : string
    +Correo : string
}

class Docente {
    +Id : int
    +Nombre : string
    +Especialidad : string
}

class Tutoria {
    +Id : int
    +Tema : string
    +Descripcion : string
}

class HorarioTutoria {
    +Id : int
    +Fecha : DateTime
    +HoraInicio : TimeSpan
    +HoraFin : TimeSpan
    +Disponible : bool
}

class Reserva {
    +Id : int
    +Estudiante : Estudiante
    +Docente : Docente
    +Tutoria : Tutoria
    +Horario : HorarioTutoria
    +Estado : string
}

' =========================
' NOTIFICACIONES
' =========================

interface INotificador {
    +Enviar(destinatario : string, mensaje : string)
}

class Notificador {
    +Enviar(destinatario : string, mensaje : string)
}

Notificador ..|> INotificador

' =========================
' SERVICIOS
' =========================

class ServicioReservas {
    -_notificador : INotificador
    +ServicioReservas(notificador : INotificador)
    +CrearReserva(reserva : Reserva)
}

ServicioReservas --> Reserva
ServicioReservas --> INotificador

' =========================
' FACTORY METHOD
' =========================

interface Notificacion {
    +Enviar(destinatario : string, mensaje : string)
}

class NotificacionEmail {
    +Enviar(destinatario : string, mensaje : string)
}

class NotificacionSMS {
    +Enviar(destinatario : string, mensaje : string)
}

class NotificacionWhatsApp {
    +Enviar(destinatario : string, mensaje : string)
}

class NotificacionTelegram {
    +Enviar(destinatario : string, mensaje : string)
}

abstract class NotificacionCreator {
    +CrearNotificacion() : Notificacion
    +EnviarNotificacion(destinatario : string, mensaje : string)
}

class EmailCreator {
    +CrearNotificacion() : Notificacion
}

class SmsCreator {
    +CrearNotificacion() : Notificacion
}

class WhatsAppCreator {
    +CrearNotificacion() : Notificacion
}

class TelegramCreator {
    +CrearNotificacion() : Notificacion
}

NotificacionEmail ..|> Notificacion
NotificacionSMS ..|> Notificacion
NotificacionWhatsApp ..|> Notificacion
NotificacionTelegram ..|> Notificacion

EmailCreator --|> NotificacionCreator
SmsCreator --|> NotificacionCreator
WhatsAppCreator --|> NotificacionCreator
TelegramCreator --|> NotificacionCreator

NotificacionCreator ..> Notificacion : crea

EmailCreator --> NotificacionEmail : crea
SmsCreator --> NotificacionSMS : crea
WhatsAppCreator --> NotificacionWhatsApp : crea
TelegramCreator --> NotificacionTelegram : crea

' =========================
' BUILDER
' =========================

class ReservaBuilder {
    -_id : int
    -_estudiante : Estudiante
    -_docente : Docente
    -_tutoria : Tutoria
    -_horario : HorarioTutoria
    -_estado : string
    +ConId(id : int) : ReservaBuilder
    +ConEstudiante(estudiante : Estudiante) : ReservaBuilder
    +ConDocente(docente : Docente) : ReservaBuilder
    +ConTutoria(tutoria : Tutoria) : ReservaBuilder
    +ConHorario(horario : HorarioTutoria) : ReservaBuilder
    +ConEstado(estado : string) : ReservaBuilder
    +Build() : Reserva
}

ReservaBuilder ..> Reserva : crea
ReservaBuilder ..> Estudiante
ReservaBuilder ..> Docente
ReservaBuilder ..> Tutoria
ReservaBuilder ..> HorarioTutoria

' =========================
' ADAPTER
' =========================

interface Videoconferencia {
    +CrearReunion(titulo : string) : string
}

class ProveedorZoom {
    +IniciarReunionZoom(temaReunion : string) : string
}

class ZoomAdapter {
    -_proveedorZoom : ProveedorZoom
    +ZoomAdapter(proveedorZoom : ProveedorZoom)
    +CrearReunion(titulo : string) : string
}

ZoomAdapter ..|> Videoconferencia
ZoomAdapter --> ProveedorZoom : adapta

' =========================
' FACADE
' =========================

class TutoriasFacade {
    -_servicioReservas : ServicioReservas
    -_videoconferencia : Videoconferencia
    +TutoriasFacade(servicioReservas : ServicioReservas, videoconferencia : Videoconferencia)
    +CrearTutoriaVirtual(reserva : Reserva) : string
}

TutoriasFacade --> ServicioReservas : coordina
TutoriasFacade --> Videoconferencia : coordina
TutoriasFacade --> Reserva : utiliza

' =========================
' RELACIONES DEL DOMINIO
' =========================

Reserva "1" --> "1" Estudiante
Reserva "1" --> "1" Docente
Reserva "1" --> "1" Tutoria
Reserva "1" --> "1" HorarioTutoria

@enduml